# drbe

./: .gitignore  Drbe.sln  README.md
Drbe.WebApi/Properties/: launchSettings.json
contract/: Cargo.toml
contract/.fleet/: run.json
contract/src/: lib.rs  role.rs  role_registry.rs
fontend/: package-lock.json
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: Document.vue  DocumentComponent.vue
frontend/src/dialogs/: SelectionWindowMenu.vue
frontend/src/types/: document.js  role.js  textFragment.js
