[package]
name = "drbe-contract"
version = "0.1.0"
edition = "2021"
authors = ["Jelle Maas <typiqally@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"

[profile.release]
codegen-units = 1
opt-level = "z" # Tell `rustc` to optimize for small code size.
lto = true
debug = false
panic = "abort"
overflow-checks = true # Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801